Implement fullpage editor

--- a/templates/head.html
+++ b/templates/head.html
@@ -11,8 +11,8 @@
 <title><<t title || "ProseMirror">></title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel=stylesheet href=/_resources/css/site.css>
-
-<header <<if type == "frontpage">>class=frontpage<</if>>>
+<body <<if type == "frontpage">>class=frontpage<</if>>>
+<header>
   <nav>
     <a class=logo href="/">ProseMirror</a>
     <div class=navlinks>
