--- a/templates/foot.html
+++ b/templates/foot.html
@@ -1,13 +1,8 @@
-</article>
-
 <footer>
   <nav>
-    <a class=logo href=".">&nbsp;</a>
     <div class=navlinks>
-      <a href="http://contributor-covenant.org/version/1/1/0/">Code of Conduct</a>
-      <a href="https://github.com/prosemirror/prosemirror/issues">Report an Issue</a>
+      <a href="https://prosemirror.net">ProseMirror</a>
+      <a href="https://github.com/adrianheine/ProsePad/issues">Report an Issue</a>
     </div>
   </nav>
 </footer>
-
-</body>
