--- a/public/css/site.css
+++ b/public/css/site.css
@@ -25,7 +25,7 @@
 
 html {
   background: black;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
   font-family: 'Source Sans Pro';
 }
@@ -54,29 +54,11 @@ h4 { font-size: 1.125em; line-height: 1.375em; margin: 1.5625em 0 0.75em; }
 
 a { text-decoration: none }
 
-.frontpage > h1 { z-index: 0; }
-
-.frontpage > h1:before {
-  content: "";
-  position: absolute;
-  left: -1000px;
-  right: -1000px;
-  bottom: -213px;
-  height: calc(100% + 440px);
-  background-size: 100px 100px;
-  background-image: linear-gradient(to right, #1a1a1a 2px, transparent 1px), linear-gradient(to bottom, #1a1a1a 2px, black 1px);
-  background-position: left 40px bottom 60px;
-  transform: rotate(-5deg);
-  transform-origin: 50% 50%;
-  z-index: -1;
-}
-
 header > * { z-index: 2; position: relative; }
 
 .frontpage header {
   position: relative;
   padding: 62px 3px 0;
-  color: white;
   margin-bottom: 40px;
 }
 
@@ -112,18 +94,9 @@ nav a.active, a:link, a:visited {
 }
 
 a.logo {
-  padding-left: 45px;
   letter-spacing: -1.5px;
-  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="786.5" height="899.6" viewBox="0 0 208.1 238.0"><path d="M104 2A102 102 0 0 0 2 104a102 102 0 0 0 102 102 102 102 0 0 0 102-102A102 102 0 0 0 104 2zm0 14.9a87.1 87.1 0 0 1 87.1 87.1 87.1 87.1 0 0 1-87.1 87.1A87.1 87.1 0 0 1 16.9 104 87.1 87.1 0 0 1 104 16.9z"/><path d="M147.1 92.7c-6.9 83.9 10.8 103.4 10.8 103.4s-55.1 5.5-82.7-13.4c-30.5-20.9-26.0-67.5-25.9-94.6.1-28.4 25.6-45.8 49.9-45.3C128.3 43.3 149.4 64.4 147.1 92.7z"/><path d="M82.1 139.5c11.3 36.3 50.6 62.4 50.6 62.4l18.5-1.4z" fill="%23fff"/><path d="M82.1 139.5c3 13.3 17.9 29.9 30.4 41.6 24.8 23.2 42 22.4 86 54.7-18.2-51.8-18.8-62-43.5-106.1-24.7-44-67.6-20.3-67.6-20.3S79 126 82.1 139.3z"/><path d="M108.9 76.0s-4.0-11.6-18.0-11.5c-30.0.2-28.8 52.1 16.9 52.0 39.6-.1 39.2-49.4 16.1-49.6-10.2-.2-15.0 9.1-15.0 9.1z" fill="%23fff"/><path d="M109.4 95.0c10.8.0 2.0 14.9-.6 20.9-1.8-8.4-10.2-20.9.6-20.9zM93.1 80.1c-5.6 0-10.2 4.5-10.2 10.2 0 5.6 4.5 10.2 10.2 10.2 5.6 0 10.2-4.5 10.2-10.2 0-5.6-4.5-10.2-10.2-10.2zm30.5-.1c-4.8 0-8.8 4.5-8.8 10.2 0 5.6 3.9 10.2 8.8 10.2 4.8 0 8.8-4.5 8.8-10.2 0-5.6-3.9-10.2-8.8-10.2z"/></svg>');
-  background-size: 32px 32px;
-  background-position: top 1px left;
-  background-repeat: no-repeat;
   font-size: 34px;
   line-height: 37px;
-}
-
-footer a.logo, .frontpage a.logo {
-  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="786.5" height="899.6" viewBox="0 0 208.1 238.0"><path d="M104 2C47.6 2 2 47.6 2 104s45.6 102 102 102 102-45.6 102-102S160.3 2 104 2z" fill="%23fff"/><path d="M147.1 92.7c-6.9 83.9 10.8 103.4 10.8 103.4s-55.1 5.5-82.7-13.4c-30.5-20.9-26-67.5-25.9-94.6.1-28.4 25.6-45.8 49.9-45.3 29.1.5 50.2 21.6 47.9 49.9z"/><path d="M82.1 139.5c12.2 33.3 22.5 42.7 40.0 55.2 25.3 18.0 36.6 17.5 76.3 41.0-38.3-36.0-85.6-50.6-116.4-96.3z" fill="%23fff"/><path d="M82.1 139.5c3 13.3 17.9 29.9 30.4 41.6 24.8 23.2 42 22.4 86 54.7-18.2-51.8-18.8-62-43.5-106.1-24.7-44-67.6-20.3-67.6-20.3S79 126 82.1 139.3z"/><path d="M108.9 76s-4-11.6-18-11.5c-30 .2-28.8 52.1 16.9 52 39.6-.1 39.2-49.4 16.1-49.6-10.2-.2-15 9.1-15 9.1z" fill="%23fff"/><path d="M109.4 95c10.8 0 2 14.9-.6 20.9-1.8-8.4-10.2-20.9.6-20.9zM93.1 80.1c-5.6 0-10.2 4.5-10.2 10.2 0 5.6 4.5 10.2 10.2 10.2 5.6 0 10.2-4.5 10.2-10.2 0-5.6-4.5-10.2-10.2-10.2zm30.5-.1c-4.8 0-8.8 4.5-8.8 10.2 0 5.6 3.9 10.2 8.8 10.2 4.8 0 8.8-4.5 8.8-10.2 0-5.6-3.9-10.2-8.8-10.2z"/></svg>');
 }
 
 .navlinks {
