--- a/templates/editor.html
+++ b/templates/editor.html
@@ -18,6 +18,7 @@ article {
   display: flex;
   flex: 1;
   min-height: 15em;
+  padding: 3px;
 }
 
 aside {
@@ -28,10 +29,6 @@ aside {
 footer {
   margin-bottom: 0;
   padding: 0.25em;
-}
-
-article {
-  padding: 1em 3px;
 }
 
 #editor {
@@ -47,11 +44,19 @@ article {
 .ProseMirror {
   flex: 1
 }
+
+header {
+  margin-bottom: 1em;
+}
 </style>
 
+<body>
+
+<article>
 <div id=editor></div>
 
 <aside>
+  <<header>>
   <div class=docinfo>
     Connected to: <span id="connected">
       <span id="docname"><<t $in.docName>></span>
@@ -60,6 +65,7 @@ article {
   </div>
 </aside>
 
+</article>
 <link rel=stylesheet href="/_resources/css/editor.css">
 <div style="display: none" id=data>
 <<t $in.content>>
@@ -67,3 +73,4 @@ article {
 <script src="/_resources/js/fullpage.js"></script>
 
 <<foot>>
+</body>
