--- a/templates/head.html
+++ b/templates/head.html
@@ -1,24 +1,7 @@
-<<in {type, title, meta, toc}>>
+<<in {title}>>
 
 <!doctype html>
 <meta charset=utf8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<<for name, value in meta || {}>>
-  <meta property="<<t name>>" content="<<t value>>">
-<</for>>
-
-<title><<t title || "ProseMirror">></title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<title><<t title || "ProsePad">></title>
 <link rel=stylesheet href=/_resources/css/site.css>
-<body <<if type == "frontpage">>class=frontpage<</if>>>
-<header>
-  <nav>
-    <a class=logo href="/">ProseMirror</a>
-    <div class=navlinks>
-      <a href="https://github.com/prosemirror">GitHub</a>
-    </div>
-  </nav>
-</header>
-
-<article>
