--- a/templates/head.html
+++ b/templates/head.html
@@ -10,7 +10,7 @@
 
 <title><<t title || "ProseMirror">></title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel=stylesheet href=/css/site.css>
+<link rel=stylesheet href=/_resources/css/site.css>
 
 <header <<if type == "frontpage">>class=frontpage<</if>>>
   <nav>
