Overhaul users system

--- a/templates/editor.html
+++ b/templates/editor.html
@@ -57,11 +57,12 @@ header {
 
 <aside>
   <<header>>
-  <div class=docinfo>
-    Connected to: <span id="connected">
-      <span id="docname"><<t $in.docName>></span>
-      <span id="users"></span>
-    </span>
+  <div class=users>
+    Currently connected: <span id="users"></span>
+    <form>
+      Your user name:
+      <input id="username" />
+    </form>
   </div>
 </aside>
 
