Use relative URLs

--- a/templates/editor.html
+++ b/templates/editor.html
@@ -101,11 +101,11 @@ header {
 </aside>
 
 </article>
-<link rel=stylesheet href="/_resources/css/editor.css">
+<link rel=stylesheet href="_resources/css/editor.css">
 <div style="display: none" id=data>
 <<t $in.content>>
 </div>
-<script src="/_resources/js/fullpage.js"></script>
+<script src="_resources/js/fullpage.js"></script>
 
 <<foot>>
 </body>
