--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <header>
   <nav>
-    <a class=logo href="/">ProsePad</a>
+    <a class=logo href="index.html">ProsePad</a>
     <div class=navlinks>
       <a href="https://github.com/adrianheine/ProsePad">GitHub</a>
     </div>
