Fix long documents in fullpage view

--- a/public/css/editor-base.css
+++ b/public/css/editor-base.css
@@ -21,6 +21,7 @@
   padding: 4px 8px 4px 14px;
   line-height: 1.2;
   outline: none;
+  overflow: auto;
 }
 
 .ProseMirror p { margin-bottom: 1em }
